@@ -19,6 +19,8 @@ UI=UI_Text.prx
 ; profile, then press TRIANGLE.
 AUTOSTART = 0;
 PROFILE   = 1;
+USE_PROXY = 0;
+PROXY = "http://192.168.1.10:3128";
 
 [SYSTEM]
 MAIN_THREAD_PRIO=35;   //was: 20;
@@ -50,7 +52,7 @@ WIFI_LOG_SERVER=192.168.2.2;
 WIFI_LOG_PORT=8000;
 
 [DIRECTORIES]
-LOCALFILES="ms0:/PSP/MUSIC"
+LOCALFILES="ms0:/PSP/MUSIC";
 
 [SHOUTCAST]
 ;DB_REQUEST_STRING="http://www.shoutcast.com/sbin/xmllister.phtml?service=pspradio";
